Preparing decoupling the starter configuration from spring-boot: mybatis, druid, sharding-sphere, page-helper, activiti

--- a/demo-server-web/src/main/resources/application-local.properties
+++ b/demo-server-web/src/main/resources/application-local.properties
@@ -16,7 +16,7 @@ spring.application.name = demo-server
 # Locations that store the Mapper XML files
 mybatis.mapper-locations = classpath*:mybatis/**/*Mapper.xml
 # Package that stores the POJO
-mybatis.type-aliases-package =
+# mybatis.type-aliases-package =
 
 ### Configuration regarding data-source ###
 # Type of the data source
@@ -29,6 +29,44 @@ spring.datasource.url = jdbc:mysql://localhost:3306/demo?useUnicode=true&charact
 spring.datasource.username = demo
 # Password to access the data source
 spring.datasource.password = demo
+
+### Configuration regarding data-source with sharding sphere ###
+## Names of data sources
+#spring.shardingsphere.datasource.names=ds_0
+## 一个实体类对应两张表，覆盖
+## spring.main.allow-bean-definition-overriding=true
+## Necessary information of 1st data source
+#spring.shardingsphere.datasource.ds_0.type = com.alibaba.druid.pool.DruidDataSource
+#spring.shardingsphere.datasource.ds_0.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.shardingsphere.datasource.ds_0.url = jdbc:mysql://localhost:3306/demo_ds_0?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+#spring.shardingsphere.datasource.ds_0.username = demo
+#spring.shardingsphere.datasource.ds_0.password = demo
+### Necessary information of 2nd data source
+##spring.shardingsphere.datasource.ds_1.type = com.alibaba.druid.pool.DruidDataSource
+##spring.shardingsphere.datasource.ds_1.driver-class-name = com.mysql.cj.jdbc.Driver
+##spring.shardingsphere.datasource.ds_1.url = jdbc:mysql://localhost:3306/demo_ds_1?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+##spring.shardingsphere.datasource.ds_1.username = demo
+##spring.shardingsphere.datasource.ds_1.password = demo
+### Necessary information of 3rd data source
+##spring.shardingsphere.datasource.ds_2.type = com.alibaba.druid.pool.DruidDataSource
+##spring.shardingsphere.datasource.ds_2.driver-class-name = com.mysql.cj.jdbc.Driver
+##spring.shardingsphere.datasource.ds_2.url = jdbc:mysql://localhost:3306/demo_ds_2?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+##spring.shardingsphere.datasource.ds_2.username = demo
+##spring.shardingsphere.datasource.ds_2.password = demo
+## The sharding strategy of databases
+#spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=id
+#spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds_$->{id % 3}
+## The actual data nodes of tables
+#spring.shardingsphere.sharding.tables.demo_record.actual-data-nodes=ds_0.demo_record
+## The sharding strategy of tables
+#spring.shardingsphere.sharding.default-table-strategy.none=
+## spring.shardingsphere.sharding.tables.demo_record.table-strategy.inline.sharding-column=id
+## spring.shardingsphere.sharding.tables.demo_record.table-strategy.inline.algorithm-expression=course$->{id % 3}
+## The rule to generate the value of specified column
+## spring.shardingsphere.sharding.tables.demo_record.key-generator.column=id
+## spring.shardingsphere.sharding.tables.demo_record.key-generator.type=SNOWFLAKE
+## Log the slow SQL
+#spring.shardingsphere.props.sql.show=true
 
 ### Configuration regarding connection pool ###
 # Initial size of the thread pool to access the data source
@@ -65,6 +103,62 @@ spring.datasource.druid.stat-view-servlet.reset-enable = false
 spring.datasource.druid.filter.config.enabled = true
 # Merge simple SQLs; log slow SQLs; disable decryption; etc.
 spring.datasource.druid.connection-properties = config.decrypt=false;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+### Configuration regarding connection pool with sharding sphere ###
+## Necessary information of 1st data source
+#spring.shardingsphere.datasource.ds_0.druid.initial-size = 1
+#spring.shardingsphere.datasource.ds_0.druid.min-idle = 1
+#spring.shardingsphere.datasource.ds_0.druid.max-active = 3
+#spring.shardingsphere.datasource.ds_0.druid.test-on-borrow = true
+#spring.shardingsphere.datasource.ds_0.druid.filters = stat,wall,config,slf4j
+#spring.shardingsphere.datasource.ds_0.druid.web-stat-filter.enabled = true
+#spring.shardingsphere.datasource.ds_0.druid.web-stat-filter.url-pattern = /*
+#spring.shardingsphere.datasource.ds_0.druid.web-stat-filter.exclusions = .js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.enabled = true
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.login-username = demo
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.login-password = demo
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.url-pattern = /druid/*
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.allow =
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.deny =
+#spring.shardingsphere.datasource.ds_0.druid.stat-view-servlet.reset-enable = false
+#spring.shardingsphere.datasource.ds_0.druid.filter.config.enabled = true
+#spring.shardingsphere.datasource.ds_0.druid.connection-properties = config.decrypt=false;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+### Necessary information of 2nd data source
+##spring.shardingsphere.datasource.ds_1.druid.initial-size = 1
+##spring.shardingsphere.datasource.ds_1.druid.min-idle = 1
+##spring.shardingsphere.datasource.ds_1.druid.max-active = 3
+##spring.shardingsphere.datasource.ds_1.druid.test-on-borrow = true
+##spring.shardingsphere.datasource.ds_1.druid.filters = stat,wall,config,slf4j
+##spring.shardingsphere.datasource.ds_1.druid.web-stat-filter.enabled = true
+##spring.shardingsphere.datasource.ds_1.druid.web-stat-filter.url-pattern = /*
+##spring.shardingsphere.datasource.ds_1.druid.web-stat-filter.exclusions = .js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.login-username = demo
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.enabled = true
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.login-password = demo
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.url-pattern = /druid/*
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.allow =
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.deny =
+##spring.shardingsphere.datasource.ds_1.druid.stat-view-servlet.reset-enable = false
+##spring.shardingsphere.datasource.ds_1.druid.filter.config.enabled = true
+##spring.shardingsphere.datasource.ds_1.druid.connection-properties = config.decrypt=false;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+### Necessary information of 3rd data source
+##spring.shardingsphere.datasource.ds_2.druid.initial-size = 1
+##spring.shardingsphere.datasource.ds_2.druid.min-idle = 1
+##spring.shardingsphere.datasource.ds_2.druid.max-active = 3
+##spring.shardingsphere.datasource.ds_2.druid.test-on-borrow = true
+##spring.shardingsphere.datasource.ds_2.druid.filters = stat,wall,config,slf4j
+##spring.shardingsphere.datasource.ds_2.druid.web-stat-filter.enabled = true
+##spring.shardingsphere.datasource.ds_2.druid.web-stat-filter.url-pattern = /*
+##spring.shardingsphere.datasource.ds_2.druid.web-stat-filter.exclusions = .js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.enabled = true
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.login-username = demo
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.login-password = demo
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.url-pattern = /druid/*
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.allow =
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.deny =
+##spring.shardingsphere.datasource.ds_2.druid.stat-view-servlet.reset-enable = false
+##spring.shardingsphere.datasource.ds_2.druid.filter.config.enabled = true
+##spring.shardingsphere.datasource.ds_2.druid.connection-properties = config.decrypt=false;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 ### Configuration regarding Redis ###
 #
