--- a/demo-server-web/pom.xml
+++ b/demo-server-web/pom.xml
@@ -67,6 +67,16 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- Sharding Sphere -->
+        <!--<dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-namespace</artifactId>
+        </dependency>-->
+
         <!-- Testing Suite -->
         <dependency>
             <groupId>junit</groupId>
