--- a/demo-server-common/pom.xml
+++ b/demo-server-common/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- Easy Excel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
+
         <!-- Apache Common -->
         <dependency>
             <groupId>commons-collections</groupId>
