--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,9 @@
         <fastjson.version>1.2.37</fastjson.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.5</commons-io.version>
-        <easyexcel.version>1.1.2-beat1</easyexcel.version>
+        <easyexcel.version>1.1.2-beat1</easyexcel.version>                                  <!-- <easyexcel.version>1.1.2-beat1</easyexcel.version> -->
+        <easypoi.version>4.0.0</easypoi.version>
+        <poi.version>4.1.2</poi.version>
         <!-- Versions for Custom Dependencies -->
         <demo-server-biz.version>1.0.0-SNAPSHOT</demo-server-biz.version>
         <demo-server-dal.version>1.0.0-SNAPSHOT</demo-server-dal.version>
@@ -315,6 +317,48 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+            </dependency>
+            <!-- Easy POI -->
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-spring-boot-starter</artifactId>
+                <version>${easypoi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-base</artifactId>
+                <version>${easypoi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-web</artifactId>
+                <version>${easypoi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-annotation</artifactId>
+                <version>${easypoi.version}</version>
+            </dependency>
+            <!--- Apache POI -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-scratchpad</artifactId>
+                <version>${poi.version}</version>
             </dependency>
 
             <!-- demo-server-biz -->
