--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <fastjson.version>1.2.37</fastjson.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.5</commons-io.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <easyexcel.version>1.1.2-beat1</easyexcel.version>                                  <!-- <easyexcel.version>1.1.2-beat1</easyexcel.version> -->
         <easypoi.version>4.0.0</easypoi.version>
         <poi.version>4.1.2</poi.version>
@@ -274,6 +275,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
             </dependency>
 
             <!-- Activiti -->
