--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,13 @@
                 <version>${poi.version}</version>
             </dependency>
 
+            <!-- Utilities -->
+            <dependency>
+                <groupId>org.gavaghan</groupId>
+                <artifactId>geodesy</artifactId>
+                <version>1.1.3</version>
+            </dependency>
+
             <!-- demo-server-biz -->
             <dependency>
                 <groupId>com.demo</groupId>
