--- a/demo-server-web/src/main/resources/application-local.properties
+++ b/demo-server-web/src/main/resources/application-local.properties
@@ -161,23 +161,27 @@ spring.datasource.druid.connection-properties = config.decrypt=false;druid.stat.
 ##spring.shardingsphere.datasource.ds_2.druid.connection-properties = config.decrypt=false;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 ### Configuration regarding Redis ###
-#
-spring.redis.cluster.nodes = 192.168.18.225:6381,192.168.18.225:6382,192.168.18.225:6383
-#
-spring.redis.cluster.max-redirects = 6
-#
-spring.redis.password = zlsd2019
-#
+# Addresses of cluster nodes
+# spring.redis.cluster.nodes = 192.168.18.225:6381,192.168.18.225:6382,192.168.18.225:6383
+# Maximum number of redirects to follow when executing commands across the cluster
+# spring.redis.cluster.max-redirects = 6
+# The host of Redis server
+spring.redis.host=localhost
+# The port of Redis server
+spring.redis.port=6379
+# The password to access Redis
+spring.redis.password = demo
+# The database index used by the connection factory
 spring.redis.database = 0
-#
+# The connection timeout in milliseconds
 spring.redis.timeout = 3000
-#
+# Max number of connections that can be allocated by the pool at a given time.
 spring.redis.pool.max-active = 8
-#
+# Maximum amount of time (in milliseconds) a connection allocation should block before throwing an exception when the pool is exhausted
 spring.redis.pool.max-wait = -1
-#
+# Max number of "idle" connections in the pool
 spring.redis.pool.max-idle = 8
-#
+# Target for the minimum number of idle connections to maintain in the pool
 spring.redis.pool.min-idle = 0
 
 ### Configuration regarding Activiti ###
