--- a/demo-server-web/src/main/resources/application-local.properties
+++ b/demo-server-web/src/main/resources/application-local.properties
@@ -237,11 +237,11 @@ xxl.job.accessToken=
 # Base package for swagger's documentation
 demo.swagger.scanPackage=com.demo
 # The title of current project
-demo.swagger.title=Demo Spring-boot
+demo.swagger.title=Demo Server
 # If the documentation of APIs will be displayed by Swagger documentation or not
 demo.swagger.display=yes
 # The description of current project
-demo.swagger.description=This is a demonstration of Spring-boot project
+demo.swagger.description=This is a demonstration of application as server
 # The contact name of current project
 demo.swagger.contactName=Vince Yuan
 # The contact URL of current project
