--- a/demo-server-web/pom.xml
+++ b/demo-server-web/pom.xml
@@ -303,7 +303,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                     <useDefaultDelimiters>true</useDefaultDelimiters>
                 </configuration>
             </plugin>
