Code adjusted (still going on)

--- a/demo-server-biz/pom.xml
+++ b/demo-server-biz/pom.xml
@@ -94,5 +94,10 @@
             <groupId>com.demo</groupId>
             <artifactId>demo-base-cache</artifactId>
         </dependency>
+        <!-- demo-base-snowflake -->
+        <!--<dependency>
+            <groupId>com.demo</groupId>
+            <artifactId>demo-base-snowflake</artifactId>
+        </dependency>-->
     </dependencies>
 </project>
