--- a/demo-server-web/src/main/resources/application-local.properties
+++ b/demo-server-web/src/main/resources/application-local.properties
@@ -252,3 +252,9 @@ demo.swagger.contactEmail=
 demo.swagger.version=1.0
 # The license URL of current project
 demo.swagger.licenseUrl=
+
+### Configuration regarding Snowflake: see "demo-base" project ###
+# The addresses of snowflake ID servers
+snowflake.servers = 127.0.0.1:8585
+# Timeout in milliseconds to wait for the snowflake ID
+snowflake.timeout = 3000
