--- a/demo-server-core/pom.xml
+++ b/demo-server-core/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>demo-server-core</artifactId>
 
+    <properties>
+        <!-- Versions for Open-Source Dependencies -->
+        <!--        <lombok.version>1.18.6</lombok.version>-->
+        <!--        <slf4j.version>1.7.25</slf4j.version>-->
+        <!-- Versions for Custom Dependencies -->
+        <demo-haima-client.version>1.0.0-SNAPSHOT</demo-haima-client.version>
+    </properties>
+
     <dependencies>
         <!-- demo-server-dto -->
         <dependency>
@@ -26,6 +34,12 @@
         <dependency>
             <groupId>com.demo</groupId>
             <artifactId>demo-base-common</artifactId>
+        </dependency>
+        <!-- demo-haima-client -->
+        <dependency>
+            <groupId>com.demo</groupId>
+            <artifactId>demo-haima-client</artifactId>
+            <version>${demo-haima-client.version}</version>
         </dependency>
     </dependencies>
 </project>
