--- a/demo-server-web/pom.xml
+++ b/demo-server-web/pom.xml
@@ -241,6 +241,11 @@
             <groupId>com.demo</groupId>
             <artifactId>demo-base-swagger</artifactId>
         </dependency>
+        <!-- demo-base-snowflake -->
+        <!--<dependency>
+            <groupId>com.demo</groupId>
+            <artifactId>demo-base-snowflake</artifactId>
+        </dependency>-->
     </dependencies>
 
     <build>
