--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <!-- Versions for Open-Source Dependencies -->
         <spring-boot.version>1.5.7.RELEASE</spring-boot.version>                            <!-- <spring-boot.version>1.5.7.RELEASE</spring-boot.version> -->
         <spring-cloud.version>Edgware.SR1</spring-cloud.version>                            <!-- <spring-cloud.version>Edgware.SR1</spring-cloud.version> -->
-        <mybatis-spring-boot.version>1.3.0</mybatis-spring-boot.version>                    <!-- <spring-boot.version>1.3.0</spring-boot.version> -->
+        <mybatis-spring-boot.version>1.3.0</mybatis-spring-boot.version>                    <!-- <mybatis-spring-boot.version>1.3.0</mybatis-spring-boot.version> -->
         <mysql.version>8.0.23</mysql.version>                                               <!-- <mysql.version>5.1.25</mysql.version> -->
         <oracle.version>19.8.0.0</oracle.version>                                           <!-- <oracle.version>11.2.0.3</oracle.version> -->
         <druid.version>1.1.10</druid.version>                                               <!-- <druid.version>1.1.21</druid.version> -->
